@@ -4,7 +4,9 @@ zeit.objectlog changes
 0.11 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Added an optional timestamp parameter to the log() method.
+
+- Refactored tests.
 
 
 0.10 (2011-10-06)
